# summ-ai

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh  test_audio_capture.py  test_e2e.py
notetaker/: __init__.py  audio.py  config.py  main.py  summarizer.py  transcriber.py
